--- a/MyTrade/Views/Wallet/ViewROI.cshtml
+++ b/MyTrade/Views/Wallet/ViewROI.cshtml
@@ -49,6 +49,7 @@
                                         <th>S No.</th>
                                         <th>TPS</th>
                                         <th>TPS Date</th>
+                                        <th>Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -63,6 +64,7 @@
                                                     <td>@i</td>
                                                     <td>@Item.ROI</td>
                                                     <td>@Item.Date</td>
+                                                    <td>@Item.Status</td>
                                                 </tr>
                                                 i++;
                                             }
