--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -44,6 +44,18 @@
                                     @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @Placeholder = "dd/mm/yyyy" })
                                 </div>
                             </div>
+                            <div class="col-lg-3 col-md-3">
+                                <div class="form-group">
+                                    <label>Status</label>
+                                    <input type="hidden" id="st" value="@Model.Status" />
+                                    <select id="Status" name="Status" class="form-control">
+                                        <option value="0">-Select-</option>
+                                        <option value="Approved">Approve</option>
+                                        <option value="Declined">Decline</option>
+                                        <option value="Pending">Pending</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="col-lg-3 col-md-3" style="margin-top:28px">
                                 <div class="form-group">
                                     <input class="btn btn-success pull-left" type="submit" value="Search" id="btnSearch" name="btnSearch" />
@@ -128,6 +140,8 @@
                                 <div class="form-group">
                                     @*<a href="/Admin/ApprovePayout" class="btn btn-success btn-sm " onclick="return confirm('Are you sure you want to approve this request ?') ">Approve</a>*@
 
+                                    <label id="lblAmount">Amount : </label>
+
                                     <a style="width:120px;" href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Model.PK_RequestID');">Submit</a>
 
                                     @*<a href="/Admin/DeclineKYCUpdateDeatilsOfUser" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this request  ?') ">Decline</a>*@
@@ -177,6 +191,12 @@
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
 <script>
+
+    if ($("#st").val() != 0)
+    {
+        $("#Status").val($("#st").val()).attr("selected", "selected");
+    }
+
     var f3 = flatpickr(document.getElementById('FromDate'),
         {
             // mode: "range"
@@ -251,15 +271,15 @@
 
     });
 
-    $('.checkBoxClass').on('click', function () {
-        debugger;
-        if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
-            $('#ckbCheckAll').prop('checked', true);
-        } else {
-            $('#ckbCheckAll').prop('checked', false);
-        }
-        //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
-        });
+    //$('.checkBoxClass').on('click', function () {
+    //    debugger;
+    //    if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
+    //        $('#ckbCheckAll').prop('checked', true);
+    //    } else {
+    //        $('#ckbCheckAll').prop('checked', false);
+    //    }
+    //    //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
+    //    });
 
 
     //$('#IsDownline').click(function () {
@@ -303,6 +323,19 @@
     //    return false;
     //}
     //}
+
+    $('.checkBoxClass').on('click', function () {
+        debugger;
+        if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
+            $('#ckbCheckAll').prop('checked', true);
+            $('#lblAmount').text('#Amount').val(Amount);
+        }
+        else {
+            $('#ckbCheckAll').prop('checked', false);
+        }
+        $("#lblAmount").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
+    });
+
 </script>
 
 
