--- a/MyTrade/Views/Admin/ViewROIForAdmin.cshtml
+++ b/MyTrade/Views/Admin/ViewROIForAdmin.cshtml
@@ -31,6 +31,19 @@
                     </div>
                     <div class="widget-content widget-content-area">
                         <div class="row">
+                            <div class="col-sm-4">
+                                <h6>
+                                    <b>
+                                        Total amount to be received : @ViewBag.TotalAmount
+                                    </b>
+                                </h6>
+                            </div>
+                            <div class="col-sm-3">
+                                <h6><b>Total amount received : @ViewBag.ReceivedAmount</b></h6>
+                            </div>
+                            <div class="col-sm-4">
+                                <h6><b>Balance amount to be received : @ViewBag.BalanceAmount</b></h6>
+                            </div>
                             <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                 <thead>
                                     <tr>
