--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -140,8 +140,6 @@
                                 <div class="form-group">
                                     @*<a href="/Admin/ApprovePayout" class="btn btn-success btn-sm " onclick="return confirm('Are you sure you want to approve this request ?') ">Approve</a>*@
 
-                                    <label id="lblAmount">Amount : </label>
-
                                     <a style="width:120px;" href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Model.PK_RequestID');">Submit</a>
 
                                     @*<a href="/Admin/DeclineKYCUpdateDeatilsOfUser" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this request  ?') ">Decline</a>*@
@@ -271,15 +269,15 @@
 
     });
 
-    //$('.checkBoxClass').on('click', function () {
-    //    debugger;
-    //    if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
-    //        $('#ckbCheckAll').prop('checked', true);
-    //    } else {
-    //        $('#ckbCheckAll').prop('checked', false);
-    //    }
-    //    //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
-    //    });
+    $('.checkBoxClass').on('click', function () {
+        debugger;
+        if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
+            $('#ckbCheckAll').prop('checked', true);
+        } else {
+            $('#ckbCheckAll').prop('checked', false);
+        }
+        //$("#lblPins").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
+        });
 
 
     //$('#IsDownline').click(function () {
@@ -324,17 +322,17 @@
     //}
     //}
 
-    $('.checkBoxClass').on('click', function () {
-        debugger;
-        if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
-            $('#ckbCheckAll').prop('checked', true);
-            $('#lblAmount').text('#Amount').val(Amount);
-        }
-        else {
-            $('#ckbCheckAll').prop('checked', false);
-        }
-        $("#lblAmount").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
-    });
+    //$('.checkBoxClass').on('click', function () {
+    //    debugger;
+    //    if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
+    //        $('#ckbCheckAll').prop('checked', true);
+    //        $('#lblAmount').text('#Amount').val(Amount);
+    //    }
+    //    else {
+    //        $('#ckbCheckAll').prop('checked', false);
+    //    }
+    //    $("#lblAmount").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
+    //});
 
 </script>
 
