--- a/MyTrade/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTrade/Views/Admin/PayoutRequestList.cshtml
@@ -111,7 +111,7 @@
                                                     <td>@Item.Name</td>
                                                     <td>@Item.GrossAmount</td>
                                                     <td>@Item.ProcessingFee</td>
-                                                    <td id="Amount">@Item.Amount</td>
+                                                    <td>@Item.Amount</td>
                                                     <td>@Item.IFSCCode</td>
                                                     <td>@Item.MemberAccNo</td>
                                                     <td>@Item.Status</td>
@@ -141,7 +141,6 @@
                                     @*<a href="/Admin/ApprovePayout" class="btn btn-success btn-sm " onclick="return confirm('Are you sure you want to approve this request ?') ">Approve</a>*@
 
                                     <a style="width:120px;" href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Model.PK_RequestID');">Submit</a>
-
                                     @*<a href="/Admin/DeclineKYCUpdateDeatilsOfUser" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this request  ?') ">Decline</a>*@
                                 </div>
                             </div>
@@ -321,18 +320,6 @@
     //    return false;
     //}
     //}
-
-    //$('.checkBoxClass').on('click', function () {
-    //    debugger;
-    //    if ($('.checkBoxClass:checked').length == $('.checkBoxClass').length) {
-    //        $('#ckbCheckAll').prop('checked', true);
-    //        $('#lblAmount').text('#Amount').val(Amount);
-    //    }
-    //    else {
-    //        $('#ckbCheckAll').prop('checked', false);
-    //    }
-    //    $("#lblAmount").text($("input[type='checkbox']:checked", $("#html5-extension").dataTable().fnGetNodes()).length);
-    //});
 
 </script>
 
