--- a/MyTrade/Views/Admin/TopUp.cshtml
+++ b/MyTrade/Views/Admin/TopUp.cshtml
@@ -21,6 +21,12 @@
                     </div>
                 </div>
                 <div class="widget-content widget-content-area">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <span style="color:red;">My Trade Total Wallet Amount : @ViewBag.TotalWalletAmount</span>
+                        </div>
+                    </div>
+
                     <div class="row mb-4">
                         <div class="col-md-4">
                             <label for="LoginId">LoginId</label>
