--- a/MyTrade/Views/Admin/TopUp.cshtml
+++ b/MyTrade/Views/Admin/TopUp.cshtml
@@ -23,7 +23,7 @@
                 <div class="widget-content widget-content-area">
                     <div class="row">
                         <div class="col-md-4">
-                            <span style="color:red;">My Trade Total Wallet Amount : @ViewBag.TotalWalletAmount</span>
+                            <span style="color:red;">My Trade  Wallet Balance : @ViewBag.TotalWalletAmount</span>
                         </div>
                     </div>
 
