--- a/MyTrade/Views/Admin/KYCUpdateDeatilsOfUser.cshtml
+++ b/MyTrade/Views/Admin/KYCUpdateDeatilsOfUser.cshtml
@@ -43,7 +43,10 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
+                                        <th>Login Id</th>
                                         <th>Name</th>
+                                        <th>Mobile No</th>
+                                        <th>Email</th>
                                         <th>Acc No</th>
                                         <th>IFSC Code</th>
                                         <th>Bank Name</th>
@@ -68,7 +71,10 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
+                                                    <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
+                                                    <td>@Item.Mobile</td>
+                                                    <td>@Item.Email</td>
                                                     <td>@Item.MemberAccNo</td>
                                                     <td>@Item.IFSCCode</td>
                                                     <td>@Item.BankName</td>
