--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -66,7 +66,7 @@
                                     @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            @*<div class="col-lg-3">
                                 <input type="hidden" id="MStatus" value="@Model.MemberStatus" />
                                 <div class="form-group">
                                     <label>Member Status</label>
@@ -76,7 +76,7 @@
                                   <option value="T">In Active</option>
                               </select>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="col-lg-3">
                                 Downline
                                 @Html.CheckBoxFor(m => m.IsDownline)
@@ -128,7 +128,9 @@
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
                                                     <td>@Item.MemberStatus</td>
-                                                    <td><a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>
+                                                    <td>  
+                                                        <a href="/AdminReports/ViewProfileForAdmin?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">Edit</a>
+                                                        @*<a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>*@
                                                         <a href="/AdminReports/DeleteUerDetails?Id=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this user ?');">Delete</a>
                                                         
                                                     </td>
