--- a/MyTrade/Views/AdminReports/ViewProfile.cshtml
+++ b/MyTrade/Views/AdminReports/ViewProfile.cshtml
@@ -25,18 +25,21 @@
                 <div class="widget-content widget-content-area">
                     <div class="d-flex justify-content-between">
                         <h3 class="">Profile</h3>
-                        <a href="/AdminReports/ViewProfileForAdmin?Id=@Model.Fk_UserId" class="mt-2 edit-profile"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg></a>
+                        @*<a href="#" class="mt-2 edit-profile"> 
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg>
+                        </a>*@
                     </div>
                     <div class="text-center user-info">
                         @if (ViewBag.ProfilePic != "")
                         {
-                            <img src="@ViewBag.ProfilePic" alt="avatar" style="height:70px;width:70px">
+                            @*<img src="@ViewBag.ProfilePic" alt="avatar" style="height:70px;width:70px">*@
+                            <img src="@ViewBag.ProfilePic" style="height:70px;width:70px">
                         }
                         else
                         {
-                            <img src="~/assets/img/ViewProfile.jpg" alt="avatar">
+                            @*<img src="~/assets/img/ViewProfile.jpg" alt="avatar" />*@
+                            <img src="~/assets/img/ViewProfile.jpg"/>
                         }
-                     
                         <p class="">@ViewBag.FirstName @ViewBag.LastName</p>
                     </div>
                     <div class="user-info-list">
