--- a/MyTrade/Views/Admin/UnUsedPin.cshtml
+++ b/MyTrade/Views/Admin/UnUsedPin.cshtml
@@ -12,9 +12,11 @@
                 <div class="statbox widget box box-shadow">
                     <div class="widget-header">
                         <div class="row">
-                            <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                            <div class="col-sm-4">
                                 <h4>E-Pin List</h4>
-                         
+                            </div>
+                            <div class="col-sm-4">
+                                <a href="/Admin/View" class="btn btn-info btn-sm">Back</a>
                             </div>
                         </div>
                     </div>
