--- a/MyTrade/Views/Admin/WalletList.cshtml
+++ b/MyTrade/Views/Admin/WalletList.cshtml
@@ -4,7 +4,12 @@
     ViewBag.Title = "WalletList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    td#txtPayment {
+    white-space: break-spaces;
+    /* word-break: break-all; */
+}
+</style>
 
 @using (Html.BeginForm("WalletList", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
@@ -39,10 +44,10 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label>Payment Mode</label>
-                                    <input type="hidden" id="PMode" value="@Model.Status" />
+                                    <input type="hidden" id="PMode" value="@Model.PaymentMode" />
                                     <select id="PaymentMode" name="PaymentMode" class="form-control">
                                         <option value="0">-Select-</option>
-                                        <option value="Online Payment">Online</option>
+                                        <option value="Online">Online</option>
                                         <option value="Offline">Offline</option>
                                     </select>
                                 </div>
@@ -96,7 +101,7 @@
                                                     <td>@Item.DisplayName</td>
                                                     <td>@Item.Amount</td>
                                                     <td>
-                                                        <a href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Model.RequestID');">View</a>
+                                                        <a href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Item.PaymentMode');">View</a>
                                                     </td>
                                                     @*@if (@Item.PaymentMode == "Cash")
                                                     {
@@ -157,42 +162,18 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    @*<h6 class="modal-title" style="color: red">Approve</h6>*@
                     <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
                 </div>
                 <div class="modal-body" style="color: black">
                     <div class="row">
-                        @*<table id="html5-extension" class="table table-hover non-hover" ,data-page-length='25'>*@
                         <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                             <thead>
                                 <tr>
-                                    <th>Sr No.</th>
                                     <th>Payment Mode</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @if (Model != null)
-                                {
-                                    if (Model.lstWallet != null)
-                                    {
-                                        int i = 1;
-                                        foreach (var Item in Model.lstWallet)
-                                        {
-                                            <tr class="text-left">
-                                                <td>@i</td>
-                                                @if (@Item.PaymentMode == "Cash")
-                                                {
-                                                    <td>@Item.PaymentMode</td>
-                                                }
-                                                else
-                                                {
-                                                    <td>@Item.PaymentMode- (@Item.BankName,@Item.BankBranch, <b>Txn No.-@Item.ChequeDDNo</b>, <b>Txn Date-</b>@Item.ChequeDDDate)</td>
-                                                }
-                                            </tr>
-                                            i++;
-                                        }
-                                    }
-                                }
+                                <tr><td id="txtPayment"></td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -212,10 +193,10 @@
         dateFormat: 'dd/mm/yy',
     });
 
-    function openPopup(RequestID) {
+    function openPopup(PaymentMode) {
         jQuery.noConflict();
-        $("#RequestID").val(RequestID);
         $("#myModal").modal('show');
+        $("#txtPayment").text(PaymentMode);
     }
     function closeModal() {
         jQuery.noConflict();
